--- a/pages/projects/zodiac_sign.html
+++ b/pages/projects/zodiac_sign.html
@@ -343,85 +343,85 @@ body{
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
         <div class="caption"><h2>Aquarius</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
+        <h3>Weakness</h3><p>runs from emotional expression, temperamental, uncompromising, aloof</p>
+        <h3>Compatibility</h3><p>Gemini and Libra</p>
+        </div>
+    </div>
+    <div class="mySlides">
+        <img class="mySlides-1 large_slide" src="">
+        <div class="caption"><h2>Pisces</h2><h3>Strenght</h3><p>dreamy, intuitive, wise, artistic, compassionate</p>
+        <h3>Weakness</h3><p>fearful, overly trusting, sad, desire to escape reality,/p>
         <h3>Compatibility</h3><p>Scorpio and Cancer</p>
         </div>
     </div>
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Pisces</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
+        <div class="caption"><h2>Aries</h2><h3>Strenght</h3><p>confident, inspired, sexy, determined, optomistic</p>
+        <h3>Weakness</h3><p>impatient, moody, short-tempered, impulsive, aggressive</p>
+        <h3>Compatibility</h3><p>Aquarius, Sagittarius, Leo, and Gemini</p>
         </div>
     </div>
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Aries</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
+        <div class="caption"><h2>Taurus</h2><h3>Strenght</h3><p>loyal, patient,practical, strong, reliable</p>
+        <h3>Weakness</h3><p>stubborn, possessive, uncompromising</p>
+        <h3>Compatibility</h3><p>Virgo and Pisces</p>
         </div>
     </div>
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Taurus</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
+        <div class="caption"><h2>Gemini</h2><h3>Strenght</h3><p>eloquent, adaptable, affectionate, curious, kind</p>
+        <h3>Weakness</h3><p>nervous, inconsistent, indecisive</p>
+        <h3>Compatibility</h3><p>Aquarius and Libra</p>
         </div>
     </div>
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Gemini</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
+        <div class="caption"><h2>Cancer</h2><h3>Strenght</h3><p>reserved, conservative, sensitive, sympathetic, persuasive</p>
+        <h3>Weakness</h3><p>moody, pessimistic, suspicious, manipulative, insecure</p>
+        <h3>Compatibility</h3><p>Scorpio and Pisces</p>
         </div>
     </div>
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Cancer</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
+        <div class="caption"><h2>Leo</h2><h3>Strenght</h3><p>passionate, cheerful, successful, fiery, confident</p>
+        <h3>Weakness</h3><p>arrogant, stubborn, self-centered, lazy, inflexible</p>
+        <h3>Compatibility</h3><p>Sagittarius, Libra, Gemini, and Aries</p>
         </div>
     </div>
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Leo</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
+        <div class="caption"><h2>Virgo</h2><h3>Strenght</h3><p>oraganized, diplomatic, grounded, gentle, practical</p>
+        <h3>Weakness</h3><p>shyness, worry, overly critical of self and others, all work and no play</p>
+        <h3>Compatibility</h3><p>Taurus and Capricorn</p>
         </div>
     </div>
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Virgo</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
+        <div class="caption"><h2>Libra</h2><h3>Strenght</h3><p>diplomacy, tactfulness, communication, fair-minded, gracious</p>
+        <h3>Weakness</h3><p>indecisive, avoids confrontations, will carry a grudge, self-pity</p>
+        <h3>Compatibility</h3><p>Leo and Sagittarius</p>
         </div>
     </div>
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Libra</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
+        <div class="caption"><h2>Scorpio</h2><h3>Strenght</h3><p>mysterious, intelligent,brave, resourceful, a true friend</p>
+        <h3>Weakness</h3><p>distrusting, jealous, secretive, violent</p>
+        <h3>Compatibility</h3><p>Scorpio and Pisces</p>
         </div>
     </div>
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Scorpio</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
+        <div class="caption"><h2>Sagittarius</h2><h3>Strenght</h3><p>adventurous, generous, honest, funny, idealistic</p>
+        <h3>Weakness</h3><p>promises more than can deliver, very impatient, will say anything no matter how undiplomatic</p>
+        <h3>Compatibility</h3><p>Leo, Aries, Aquarius, and Libra</p>
         </div>
     </div>
     <div class="mySlides">
         <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Sagittarius</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
-        </div>
-    </div>
-    <div class="mySlides">
-        <img class="mySlides-1 large_slide" src="">
-        <div class="caption"><h2>Capricorn</h2><h3>Strenght</h3><p>intelligent, independent, progressive, deep, creative</p>
-        <h3>Weakness</h3><p>Runs from emotional expression, temperamental, uncompromising, aloof</p>
-        <h3>Compatibility</h3><p>Scorpio and Cancer</p>
+        <div class="caption"><h2>Capricorn</h2><h3>Strenght</h3><p>organized, responsible, leader, serious, disciplined</p>
+        <h3>Weakness</h3><p>know-it-all, unforgiving, expecting the worst</p>
+        <h3>Compatibility</h3><p>Pisces, Scorpio, Virgo, and Taurus</p>
         </div>
     </div>
 </div>
@@ -466,12 +466,12 @@ body{
         <button onclick="myFunction()"><i class="fa fa-bars dropbtn"></i></button>
         <ul id="myDropdown" class="dropdown-content child">
             <li id = "video"><!--<a href="url">Video</a>--></li>
-            <li id = "photo"><a href="photography.html">Photography</a></li>
-            <li id = "wd"><a href="webdesign.html">Web Design</a></li>
-            <li id = "graphics"><a href="graphics.html">Graphics</a></li>
-            <li id = "projects"><a href="projects.html">Projects</a></li>
-            <li id = "logo"><a href="logo.html">Logo</a></li>
-            <li id = "type"><a href="type.html">Type</a></li>
+            <li id = "photo"><a href="../photography.html">Photography</a></li>
+            <li id = "wd"><a href="../webdesign.html">Web Design</a></li>
+            <li id = "graphics"><a href="../graphics.html">Graphics</a></li>
+            <li id = "projects"><a href="../projects.html">Projects</a></li>
+            <li id = "logo"><a href="../logo.html">Logo</a></li>
+            <li id = "type"><a href="../type.html">Type</a></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
             <li id = "sound"><!--<a href="url">Sound</a>--></li>
         </ul><!--dropdown ends-->
