--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
 <div class="box nav dropdown">
         <button onclick="myFunction()"><i class="fa fa-bars dropbtn"></i></button>
         <div id="myDropdown" class="dropdown-content">
-            <li id = "video"><!--<a href="url">Video</a>--></li>
+            <!--<li id = "video"><a href="url">Video</a></li>-->
             <li id = "photo"><a href="pages/photography.html">Photography</a></li>
             <li id = "wd"><a href="pages/webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="pages/graphics.html">Graphics</a></li>
             <li id = "projects"><a href="pages/projects.html">Projects</a></li>
             <li id = "logo"><a href="pages/logo.html">Logo</a></li>
             <li id = "type"><a href="pages/type.html">Type</a></li>
-            <li id = "animate"><!--<a href="url">Animate</a>--></li>
-            <li id = "sound"><!--<a href="url">Sound</a>--></li>
+            <!--<li id = "animate"><a href="url">Animate</a></li>-->
+            <!--<li id = "sound"><a href="url">Sound</a></li>-->
         </div><!--dropdown ends-->
         </div><!--nav ends-->
 </body>
