--- a/pages/logo.html
+++ b/pages/logo.html
@@ -62,10 +62,8 @@
     <span class="helper"></span>
     <div>
         <div id="header_contact">Caffeine92</div>
-        <div id="slide_1"><br><p>COMING SOON</p>
-            <img class="car_ads" src="">
-            <img class="car_ads" src="">
-            <img class="car_ads" src="">
+        <div id="slide_1">
+            <img id="caffeine-logo" src="../images/logo/caffeine92-a.jpg" alt="Caffeine92 Logo Design">
         
         </div><!--slide_1 ENDS-->
         <div class="popupCloseButton">X</div>
@@ -77,8 +75,7 @@
         <div>
             <div id="header_contact">MaPa Cuisine</div>
             <div id="slide_1"><br><p>COMING SOON</p>
-                <img class="car_ads" src="">
-                <img class="car_ads" src="">
+                <img id="MPC-logo" src="../images/logo/caffeine92-a.jpg" alt="Caffeine92 Logo Design">
             
             </div><!--slide_1 ENDS-->
             <div class="popupCloseButton">X</div>
@@ -101,8 +98,8 @@
             <li id = "projects"><a href="projects.html">Projects</a></li>
             <li id = "logo"><a href="logo.html">Logo</a></li>
             <li id = "type"><a href="type.html">Type</a></li>
-            <li id = "animate"><!--<a href="url">Animate</a>--></li>
-            <li id = "sound"><!--<a href="url">Sound</a>--></li>
+            <li id = "animate"><!--<a href="url">Animate&Sound</a>--></li>
+            <li id = "sound"><!--<a href="url">BTS</a>--></li>
         </ul><!--dropdown ends-->
         <div class="clear"></div>
         </div><!--nav ends-->
